# TruthLayer

./: .cursorrules  .gitignore  .samignore  CLAUDE.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  example_usage.py  main.py  requirements.txt  samconfig.toml  template.yaml
benchmarks/: README.md  run_benchmarks.py
benchmarks/results/: .gitkeep
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/dashboard/: layout.tsx  page.tsx
dashboard/src/app/get-api-key/: page.tsx
dashboard/src/lib/: api.ts
docs/: 01_EXECUTIVE_SUMMARY.md  02_SYSTEM_ARCHITECTURE.md  03_API_SPECIFICATION.md  04_DATABASE_SCHEMA.md  05_CORE_ALGORITHM.md  06_VERIFICATION_WORKFLOW.md  07_INTEGRATION_GUIDE.md  08_DASHBOARD_SPECS.md  09_DEPLOYMENT_ARCHITECTURE.md  10_PERFORMANCE_BENCHMARKS.md  11_RISK_MITIGATION.md
examples/: customer_support_chatbot.py  document_qa.py  legal_contract_analyzer.py
integrations/langchain/: README.md  __init__.py  truthlayer_langchain.py
lambda/analytics/: handler.py
lambda/documents/: handler.py
lambda/health/: handler.py
lambda/keys/: handler.py
lambda/verify/: handler.py
layer/: requirements.txt
layer/python/src/utils/: text_splitter.py
layer/python/src/verifier/: claim_extractor.py
scripts/: deploy.py  generate_api_key.py  test_api.sh
sdk/js/: truthlayer.ts
sdk/python/: README.md  pyproject.toml  truthlayer.py
sdk/python/truthlayer/: __init__.py
sdk/python/truthlayer/langchain/: __init__.py
src/: config.py
src/embeddings/: __init__.py  base.py  cached_provider.py
src/mocks/: embedding_provider.py
src/utils/: auth.py
src/verifier/: confidence_scorer.py  verifier.py
tests/: test_bedrock.py  test_keys_handler.py  test_langchain_integration.py  test_verifier.py
(+5 files in other folders)
