[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truthlayer-sdk"
version = "0.1.0"
description = "TruthLayer — AI Hallucination Verification SDK. One-line verification of AI outputs against source documents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Prakhar Shukla", email = "prakhar230125@gmail.com" },
]
keywords = [
    "ai",
    "hallucination",
    "verification",
    "llm",
    "fact-checking",
    "truth",
    "trustworthy-ai",
    "guardrails",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/prakhar230620/TruthLayer"
Documentation = "https://github.com/prakhar230620/TruthLayer#readme"
Repository = "https://github.com/prakhar230620/TruthLayer"
Issues = "https://github.com/prakhar230620/TruthLayer/issues"

[tool.hatch.build.targets.sdist]
include = ["truthlayer/"]

[tool.hatch.build.targets.wheel]
packages = ["truthlayer"]
